Deployments-Services/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service1
  labels:
    app: service1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: service1
  template:
    metadata:
      labels:
        app: service1
    spec:
      containers:
      - name: service1
        image: melihselamiurkmez/istio-service1
        ports:
        - containerPort: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service2
  labels:
    app: service2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: service2
  template:
    metadata:
      labels:
        app: service2
    spec:
      containers:
      - name: service2
        image: melihselamiurkmez/istio-service2
        ports:
        - containerPort: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service3
  labels:
    app: service3
spec:
  replicas: 3
  selector:
    matchLabels:
      app: service3
  template:
    metadata:
      labels:
        app: service3
    spec:
      containers:
      - name: service3
        image: melihselamiurkmez/istio-service3
        ports:
        - containerPort: 5000
