Deployments-Services/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: service1
spec:
  selector:
    app: service1
  ports:
  - name: flask-port
    protocol: TCP
    port: 5000
  type: ClusterIP 
---
apiVersion: v1
kind: Service
metadata:
  name: service2
spec:
  selector:
    app: service2
  ports:
  - name: flask-port
    protocol: TCP
    port: 5000
  type: ClusterIP 
---
apiVersion: v1
kind: Service
metadata:
  name: service3
spec:
  selector:
    app: service3
  ports:
  - name: flask-port
    protocol: TCP
    port: 5000
  type: ClusterIP
