Deployments-Services/gateway-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - service1.istioexample.com
    - service2.istioexample.com
    - service3.istioexample.com
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vs-1
spec:
  hosts:
  - service1.istioexample.com
  gateways:
  - istio-gateway
  http:
  - match:
    - uri:
        exact: /
    - uri:
        exact: /service1
    route:
    - destination:
        host: service1
        port:
          number: 5000
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vs-2
spec:
  hosts:
  - service2.istioexample.com
  gateways:
  - istio-gateway
  http:
  - match:
    - uri:
        exact: /
    - uri:
        exact: /service2
    route:
    - destination:
        host: service2
        port:
          number: 5000
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vs-3
spec:
  hosts:
  - service3.istioexample.com
  gateways:
  - istio-gateway
  http:
  - match:
    - uri:
        exact: /
    - uri:
        exact: /service3
    route:
    - destination:
        host: service3
        port:
          number: 5000
